# willyproject

./: .gitignore  README.md  azimuthal_spectrum.py  compute_C.py  image_sgra.py  main.py  pyproject.toml  test_synthetic.py
eht-sgra-polarization-imaging/: background.md  report.md
