[project]
name = "willyproject"
version = "0.1.0"
description = "Banks-Fischler C observable computation from EHT M87 polarimetric data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ehtim>=1.2.10",
    "matplotlib>=3.10.8",
    "nfft>=0.1",
    "numpy>=2.4.2",
    "pynfft3>=0.2.2",
]
